--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -7,11 +7,17 @@
 @font-face {
     font-family: "ITCAvant" ;
     src: url(../fonts/ITC-Avant-Garde-Gothic/ITCAvantGardeStd-Demi.otf);
-    font-weight: 300;
+    font-weight: 400;
 }
 
 @font-face {
     font-family: "ITCAvant" ;
     src: url(../fonts/ITC-Avant-Garde-Gothic/ITCAvantGardeStd-Bk.otf);
     font-weight: 200;
+}
+
+@font-face {
+    font-family: "ITCAvant" ;
+    src: url(../fonts/ITC-Avant-Garde-Gothic/ITCAvantGardeStd-Md.otf);
+    font-weight: 300;
 }
