--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,14 @@
 @import './styles/fonts.scss';
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html, body{
   width:100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
@@ -14,4 +18,36 @@ html, body{
 h1,h2,h3{
   font-family: ITCAvant;
   font-weight: 300;
+}
+
+.header_text{
+  margin-bottom: 50px;
+  text-transform: uppercase;
+  opacity: 0.75;
+}
+
+.p_graph{
+  margin-top:20px;
+  margin-bottom: 40px;
+
+}
+
+.link_bottom{
+  display: inline;
+  padding: 5px 0;
+  border-bottom: 3px solid #C0345E;;
+   & a{
+    text-decoration: none;
+   }
+}
+
+.service_graph{
+  width:50%;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.bottom_margin{
+  margin-bottom:20px;
+  text-transform:uppercase
 }
