--- a/src/index.scss
+++ b/src/index.scss
@@ -51,3 +51,16 @@ h1,h2,h3{
   margin-bottom:20px;
   text-transform:uppercase
 }
+
+.carousel_container{
+  display: flex;
+  align-items: center;
+  gap:20px;
+  justify-content : flex-end;
+}
+
+.flex_item_text{
+  margin-top:10px;
+  
+
+}
